# kuka_ws

./: .~lock.2022-05-26-10-34-17netft_data.csv#
devel/: .catkin  .rosinstall  setup.sh
devel/include/image_proc/: CropDecimateConfig.h  DebayerConfig.h  RectifyConfig.h  ResizeConfig.h
devel/include/image_view/: ImageViewConfig.h
devel/include/netft_utils/: Cancel.h  GetDoubleRequest.h  GetDoubleResponse.h  SetBiasRequest.h  SetBiasResponse.h  SetFilterRequest.h  SetFilterResponse.h  SetMaxRequest.h  SetMaxResponse.h  SetThresholdRequest.h  SetThresholdResponse.h  SetToolDataRequest.h  SetToolDataResponse.h  StartSimRequest.h  StartSimResponse.h  StopSimRequest.h  StopSimResponse.h
devel/include/stereo_image_proc/: DisparityConfig.h
devel/lib/camera_calibration/: cameracheck.py  tarfile_calibration.py
devel/lib/image_proc/: image_proc
devel/lib/image_publisher/: image_publisher
devel/lib/image_rotate/: image_rotate
devel/lib/image_view/: disparity_view  extract_images  extract_images_sync  image_saver  stereo_view  video_recorder
devel/lib/netft_utils/: netft_node  netft_utils  netft_utils_cpp_test  netft_utils_sim
devel/lib/pkgconfig/: camera_calibration.pc  depth_image_proc.pc  haption.pc  image_proc.pc  image_publisher.pc  image_rotate.pc  image_view.pc  launch.pc  netft_utils.pc  robotiq_2f_140_gripper_visualization.pc  robotiq_2f_85_gripper_visualization.pc  robotiq_2f_c2_gripper_visualization.pc  robotiq_2f_gripper_action_server.pc  robotiq_2f_gripper_control.pc  robotiq_ethercat.pc  robotiq_ft_sensor.pc  robotiq_modbus_rtu.pc  robotiq_modbus_tcp.pc  rosbag_to_csv.pc  scripts.pc  stereo_image_proc.pc  ur10_e_moveit_config.pc  ur10_moveit_config.pc  ur3_e_moveit_config.pc  ur3_moveit_config.pc  ur5_e_moveit_config.pc  ur5_moveit_config.pc  ur_bringup.pc  ur_description.pc  ur_driver.pc  ur_e_description.pc  ur_e_gazebo.pc  ur_gazebo.pc  ur_kinematics.pc  ur_msgs.pc
devel/lib/robotiq_2f_gripper_action_server/: robotiq_2f_gripper_action_server_client_test  robotiq_2f_gripper_action_server_node
devel/lib/robotiq_2f_gripper_control/: robotiq_2f_gripper_ethercat_node
devel/lib/robotiq_ft_sensor/: rq_sensor  rq_test_sensor
devel/lib/scripts/: F_kuka_out_delay.py  MyControl_F_node  MyControl_V_node  MyControl_node  NoControl_node  TDPA_node  axia_ft_compensation.py  blink_detector.py  cam1_record.py  cam2.py  cam2_record.py  cam3.py  cam_gui.py  cam_show.py  config_kuka.py  config_kuka_C.py  delayed_F_kuka_out_delay.py  falcon_node  falcon_sub.py  ft_compensation.py  ft_delay.py  ft_sub.py  haption_delay_sub.py  haption_delay_sub_ypr.py  input_control.py  joy_control.py  joy_sub.py  joy_vibrate.py  kuka_joint_sub.py  kuka_joints_delay.py  move_pub.py  robotiq_ft_compensation.py  rot_delay.py  sim_delayed_pos_cmd_pub.py  sim_ft_delay.py  sim_kuka_pos_sub.py  tf_sub.py  time_pub.py  timestep.py  timestep_delay.py  (+1 more)
devel/lib/stereo_image_proc/: stereo_image_proc
src/iiwaPy3/python_client/: Getters.py  Senders.py  hap2iiwa_directServoCart.py  iiwaPy3.py  iiwa_directServoCart.py  iiwa_directServoCartQ.py  iiwa_directServoForce.py  iiwa_directServoJoints.py  iiwa_hole.py  iiwa_peel old.py  iiwa_peel.py  iiwa_peg.py  iiwa_pen.py  iiwa_screw.py  input2iiwa_directServoCart.py
src/launch/: ControlTest.launch  FILM.launch  KUKA.launch  KUKA_peel.launch  MyControlLaunch  PP_baseline.launch  PRACTICE.launch  P_baseline.launch  ROBOTIQ.launch  TEST.launch  cam_show.sh  export.launch  new_KUKA.launch  record_data.sh  run_cams.sh  run_cop_KUKA.sh  run_cop_KUKA_BL.sh  run_cop_KUKA_C.sh  run_cop_KUKA_TR.sh  run_cop_sim_KUKA.sh  run_cop_sim_only_KUKA.sh  run_falcon.sh  run_haption.sh  run_iiwaPy3.sh  run_iiwaPy3_hap.sh  run_iiwaPy_hole.sh  run_iiwaPy_peel.sh  run_iiwaPy_peg.sh  run_iiwaPy_pen.sh  run_iiwaPy_screw.sh
src/launch/OLD/: old-oldKUKA.launch  run_cop_KUKA_GHOST.sh  run_cop_KUKA_SIM.sh  run_cop_KUKA_SIM_VIS.sh  run_cop_sim_only_KUKA.sh  run_iiwaPy3TEST.sh  run_iiwaPy3_hap.sh
src/scripts/: CMakeLists.txt  package.xml
src/scripts/src/config/: config_kuka.py  config_kuka_C.py  timestep.py
src/scripts/src/controller/: CMakeCache.txt  CMakeLists.txt  Makefile  MyControl_F.cpp  MyControl_V.cpp  NoControl.cpp  TDPA.cpp  cmake_install.cmake
src/scripts/src/data_recording/: bag.sh  bag_peg.sh  baseline_bag.sh
src/scripts/src/delay/: delayed_v_hap_out_delay.py  gripper_cmd_delay.py  kuka_joints_delay.py  v_hap_out_delay.py
src/scripts/src/delay/NEW/: F_kuka_out_delay.py  delayed_F_kuka_out_delay.py  delayed_v_hap_out_delay.py  gripper_cmd_delay.py  kuka_joints_delay.py  timestep_delay.py  v_hap_out_delay.py
src/scripts/src/feedback/: axia_ft_compensation.py  axia_ft_compensation_peel.py  ft_TF_delay.py  ft_delay.py  ft_delay_old.py  rot_delay.py  sim_ft.py  sim_ft_delay.py  vrep_cam1_sub.py
src/scripts/src/gui/: cam1 (copy).py  cam1.py  cam1OLD.py  cam1_show.py  cam2.py  cam2_show.py  cam3.py  cam3_show.py  cam_gui.py  cam_gui_faster (not working).py  cam_gui_faster.py  cam_show.py  cams.py  kuka_gui.py  kuka_gui_NEW.py
src/scripts/src/in/: input_control.py
src/scripts/src/input/: falcon_pub.cpp  haption_delay_sub.py  haption_delay_sub_ypr.py  input_control.py
src/scripts/src/input/falcon/: falcon.cpp
src/scripts/src/input/haption/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  haption (copy).cpp  haption BACKUP.cpp  haption IMPEDANCE.cpp  haption.cpp  haptionv2.cpp  jpos_delay.py
src/scripts/src/kuka/: kuka_j_pub.py
src/scripts/src/sim/: sim_kuka_jpos_sub.py  sim_kuka_pos_sub.py
src/scripts/src/user/: Blinks_record.txt  blink_detector.py  detect_blinks (original).py  emg_hrm.py  user_cam.py  user_phys.py
src/vrep_scenes/: KUKA-BRL-GHOST.ttt  KUKA-BRL.ttt  KUKA-IK-SIM.ttt  KUKA-SIM (Q-Joints).ttt  KUKA-SIM (with rob change).ttt  KUKA-SIM-CART.ttt  KUKA-SIM-ONLY.ttt  KUKA-SIM.ttt  KUKA-SIM_SatBotL.ttt  KUKA-SIM_SatCentre.ttt  KUKA-SIM_SatTopR.ttt
src/vrep_scenes/Archive/: KUKA-BRL-PROX.ttt  (+8 more)
vrep/: bubbleRobClient_b0RemoteApi  coppeliaSim  standAloneKinematicsDemo1  standAloneKinematicsDemo2
vrep/system/: usrset.txt
(+74 files in other folders)
